[gd_scene load_steps=2 format=3 uid="uid://dxd2oyw4os7p7"]

[ext_resource type="Script" path="res://src/utilities/enemy_diagonal_spawner.gd" id="1_ctqja"]

[node name="EnemyDiagonalSpawner" type="Node2D"]
script = ExtResource("1_ctqja")

[node name="FreeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
